.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select Branch for the Cost Center</inlineHelpText>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Cost Centers</relationshipLabel>
    <relationshipName>Cost_Centers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>