.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center__c/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <inlineHelpText>Enter the Public Group Name</inlineHelpText>
    <label>Public Group</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>