.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center__c/fields/SMS_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SMS_Cost_Center__c</fullName>
    <inlineHelpText>Enter the Developer Name of the Application SMS Config Custom Metadata</inlineHelpText>
    <label>SMS Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>