.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <inlineHelpText>Select Team for Cost Center</inlineHelpText>
    <label>Team</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>