.vscode/allianceuat_compare/force-app/main/default/objects/Cost_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Team__c</columns>
    <columns>Public_Group__c</columns>
    <columns>SMS_Cost_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>